Final implementation of API on to the front end.

--- a/src/public/todo.html
+++ b/src/public/todo.html
@@ -87,5 +87,6 @@
 		<script src="jquery/jquery.js"></script>
 		<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 		<script src="js/todo.js"></script>
+		<script src="js/shared.js"></script>
 	</body>
 </html>
