--- a/src/public/index.html
+++ b/src/public/index.html
@@ -47,5 +47,6 @@
 		<script src="jquery/jquery.js"></script>
 		<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 		<script src="js/index.js"></script>
+		<script src="js/shared.js"></script>
 	</body>
 </html>
