--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Better ToDo List</title>
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 	</head>
 	<body class="bg-secondary">
 		<nav>
