--- a/src/public/todo.html
+++ b/src/public/todo.html
@@ -85,6 +85,15 @@
 			</div>
 		</div>
 
+		<footer class="bg-dark text-center text-lg-start fixed-bottom">
+			<div class="text-center text-light p-3">
+			  © 2023 Copyright:
+			  <a class="text-light" href="https://github.com/OstojaOfficial">OstojaOfficial</a>
+			  <br>
+			  <a class="text-light" href="docs/">API docs</a>
+			</div>
+		</footer>
+
 		<script src="jquery/jquery.js"></script>
 		<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 		<script src="js/todo.js"></script>
