--- a/src/public/todo.html
+++ b/src/public/todo.html
@@ -5,8 +5,18 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>ToDo List</title>
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="icon" type="image/png" href="assets/favicon.png">
+
+		<meta property="og:title" content="Better ToDo List">
+		<meta property="og:site_name" content="Better ToDo List">
+		<meta property="og:url" content="https://test.omegaorigin.com">
+		<meta property="og:description" content="Better ToDo List then Petar's.">
+		<meta property="og:type" content="website">
+
+		<meta name="theme-color" content="#6c757d">
+		<meta name="description" content="Better ToDo List then Petar's.">
+		<meta name="keywords" content="omegaorigin, todolist, todo">
 	</head>
 	<body class="bg-secondary">
 		<nav>
@@ -94,9 +104,9 @@
 			</div>
 		</footer>
 
-		<script src="jquery/jquery.js"></script>
-		<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-		<script src="js/todo.js"></script>
-		<script src="js/shared.js"></script>
+		<script type="text/javascript" src="jquery/jquery.js"></script>
+		<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script type="text/javascript" src="js/todo.js"></script>
+		<script type="text/javascript" src="js/shared.js"></script>
 	</body>
 </html>
