Added cookie that never expires and contributor

--- a/src/public/todo.html
+++ b/src/public/todo.html
@@ -99,6 +99,7 @@
 			<div class="text-center text-light p-3">
 			  © 2023 Copyright:
 			  <a class="text-light" href="https://github.com/OstojaOfficial">OstojaOfficial</a>
+			  <a class="text-light" href="https://github.com/Steropor">Steropor</a>
 			  <br>
 			  <a class="text-light" href="docs/">API docs</a>
 			</div>
